--- a/genindex.html
+++ b/genindex.html
@@ -44,6 +44,7 @@
  <a href="#A"><strong>A</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
+ | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#R"><strong>R</strong></a>
  
@@ -82,9 +83,13 @@
   </dt>
 
   </dl></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
       
-  <dt><a href="modules.html#log">log() (built-in function)</a>
+  <dt><a href="modules.html#anchipy.main">main() (in module anchipy)</a>
   </dt>
 
   </dl></td>
