--- a/_modules/anchipy.html
+++ b/_modules/anchipy.html
@@ -54,7 +54,7 @@
 <span class="kn">from</span> <span class="nn">globv</span> <span class="kn">import</span> <span class="o">*</span>
 
 
-<div class="viewcode-block" id="read_utf8_file"><a class="viewcode-back" href="../modules.html#anchipy.read_utf8_file">[docs]</a><span class="k">def</span> <span class="nf">read_utf8_file</span><span class="p">(</span><span class="n">filename</span><span class="p">):</span>
+<div class="viewcode-block" id="read_utf8_file"><a class="viewcode-back" href="../index.html#anchipy.read_utf8_file">[docs]</a><span class="k">def</span> <span class="nf">read_utf8_file</span><span class="p">(</span><span class="n">filename</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Read file contents as utf8 characters</span>
 <span class="sd">    </span>
@@ -67,9 +67,9 @@
         <span class="n">lines</span> <span class="o">=</span> <span class="n">f</span><span class="o">.</span><span class="n">readlines</span><span class="p">()</span>
         <span class="k">return</span> <span class="p">[</span><span class="s1">&#39;&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="n">ch</span><span class="o">.</span><span class="n">strip</span><span class="p">()</span> <span class="k">for</span> <span class="n">ch</span> <span class="ow">in</span> <span class="n">line</span><span class="o">.</span><span class="n">split</span><span class="p">()])</span> <span class="k">for</span> <span class="n">line</span> <span class="ow">in</span> <span class="n">lines</span><span class="p">]</span></div>
 
-<div class="viewcode-block" id="locate_paragraph_words"><a class="viewcode-back" href="../modules.html#anchipy.locate_paragraph_words">[docs]</a><span class="k">def</span> <span class="nf">locate_paragraph_words</span><span class="p">(</span><span class="n">uni_words</span><span class="p">,</span> <span class="n">curj</span><span class="p">,</span> <span class="n">page</span><span class="p">):</span>
+<div class="viewcode-block" id="locate_paragraph_words"><a class="viewcode-back" href="../index.html#anchipy.locate_paragraph_words">[docs]</a><span class="k">def</span> <span class="nf">locate_paragraph_words</span><span class="p">(</span><span class="n">uni_words</span><span class="p">,</span> <span class="n">curj</span><span class="p">,</span> <span class="n">page</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    </span>
+<span class="sd">    Locate words in paragraph</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">global</span> <span class="n">normal_font_size</span><span class="p">,</span><span class="n">img_height</span><span class="p">,</span><span class="n">img_width</span><span class="p">,</span><span class="n">udl_width</span><span class="p">,</span><span class="n">udl_margin</span><span class="p">,</span><span class="n">col_width</span><span class="p">,</span><span class="n">tot_margin</span>
     <span class="n">n</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">uni_words</span><span class="p">);</span>
@@ -95,7 +95,7 @@
     
     <span class="k">return</span> <span class="n">ll</span><span class="p">,</span><span class="n">pl</span><span class="p">,</span><span class="n">curj</span></div>
 
-<div class="viewcode-block" id="add_border"><a class="viewcode-back" href="../modules.html#anchipy.add_border">[docs]</a><span class="k">def</span> <span class="nf">add_border</span><span class="p">(</span><span class="n">draw</span><span class="p">):</span>
+<div class="viewcode-block" id="add_border"><a class="viewcode-back" href="../index.html#anchipy.add_border">[docs]</a><span class="k">def</span> <span class="nf">add_border</span><span class="p">(</span><span class="n">draw</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Add top, bottom, left and right borders to the current doc</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -140,7 +140,7 @@
     <span class="n">draw</span><span class="o">.</span><span class="n">line</span><span class="p">((</span><span class="n">j</span><span class="p">,</span><span class="n">i1</span><span class="p">,</span><span class="n">j</span><span class="p">,</span><span class="n">i2</span><span class="p">),</span> <span class="n">fill</span> <span class="o">=</span> <span class="p">(</span><span class="mi">255</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">),</span> <span class="n">width</span> <span class="o">=</span> <span class="n">inner_border_width</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="init_image"><a class="viewcode-back" href="../modules.html#anchipy.init_image">[docs]</a><span class="k">def</span> <span class="nf">init_image</span><span class="p">():</span>
+<div class="viewcode-block" id="init_image"><a class="viewcode-back" href="../index.html#anchipy.init_image">[docs]</a><span class="k">def</span> <span class="nf">init_image</span><span class="p">():</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Initialize one page</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -150,7 +150,7 @@
     <span class="n">add_border</span><span class="p">(</span><span class="n">draw</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">im</span><span class="p">,</span> <span class="n">draw</span></div>
 
-<div class="viewcode-block" id="new_page_merge"><a class="viewcode-back" href="../modules.html#anchipy.new_page_merge">[docs]</a><span class="k">def</span> <span class="nf">new_page_merge</span><span class="p">(</span><span class="n">im</span><span class="p">):</span>
+<div class="viewcode-block" id="new_page_merge"><a class="viewcode-back" href="../index.html#anchipy.new_page_merge">[docs]</a><span class="k">def</span> <span class="nf">new_page_merge</span><span class="p">(</span><span class="n">im</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Merge new page to the existing pages</span>
 
@@ -164,7 +164,10 @@
     <span class="n">merger</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="s2">&quot;anchipy_formatted.pdf&quot;</span><span class="p">)</span>
     <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="s1">&#39;temp.pdf&#39;</span><span class="p">)</span></div>
 
-<span class="k">def</span> <span class="nf">render_paragraph</span><span class="p">(</span><span class="n">im</span><span class="p">,</span> <span class="n">draw</span><span class="p">,</span> <span class="n">P</span><span class="p">,</span> <span class="n">loc_list</span><span class="p">,</span> <span class="n">page_list</span><span class="p">,</span> <span class="n">curp</span><span class="p">):</span>
+<div class="viewcode-block" id="render_paragraph"><a class="viewcode-back" href="../index.html#anchipy.render_paragraph">[docs]</a><span class="k">def</span> <span class="nf">render_paragraph</span><span class="p">(</span><span class="n">im</span><span class="p">,</span> <span class="n">draw</span><span class="p">,</span> <span class="n">P</span><span class="p">,</span> <span class="n">loc_list</span><span class="p">,</span> <span class="n">page_list</span><span class="p">,</span> <span class="n">curp</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Render a paragraph</span>
+<span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">global</span> <span class="n">normal_font_size</span><span class="p">,</span><span class="n">img_height</span><span class="p">,</span><span class="n">img_width</span><span class="p">,</span><span class="n">udl_width</span><span class="p">,</span><span class="n">udl_margin</span>
     <span class="n">font</span> <span class="o">=</span> <span class="n">ImageFont</span><span class="o">.</span><span class="n">truetype</span><span class="p">(</span><span class="n">resource_filename</span><span class="p">(</span><span class="n">__name__</span><span class="p">,</span><span class="s1">&#39;font.ttf&#39;</span><span class="p">),</span> <span class="n">size</span> <span class="o">=</span> <span class="n">normal_font_size</span><span class="p">,</span> <span class="n">encoding</span> <span class="o">=</span> <span class="s2">&quot;unic&quot;</span><span class="p">)</span>
     <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">P</span><span class="p">)):</span>
@@ -183,9 +186,9 @@
             <span class="c1">##draw red vertical line</span>
             <span class="n">draw</span><span class="o">.</span><span class="n">line</span><span class="p">((</span><span class="n">loc_list</span><span class="p">[</span><span class="n">i</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span><span class="o">-</span><span class="n">udl_margin</span><span class="p">,</span> <span class="n">tot_margin</span><span class="p">,</span> <span class="n">loc_list</span><span class="p">[</span><span class="n">i</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span><span class="o">-</span><span class="n">udl_margin</span><span class="p">,</span> <span class="n">img_height</span><span class="o">-</span><span class="n">tot_margin</span><span class="p">),</span><span class="n">fill</span> <span class="o">=</span> <span class="p">(</span><span class="mi">255</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">),</span> <span class="n">width</span> <span class="o">=</span> <span class="n">udl_width</span><span class="p">)</span>
 
-    <span class="k">return</span> <span class="n">im</span><span class="p">,</span><span class="n">draw</span><span class="p">,</span><span class="n">curp</span>
+    <span class="k">return</span> <span class="n">im</span><span class="p">,</span><span class="n">draw</span><span class="p">,</span><span class="n">curp</span></div>
 
-<div class="viewcode-block" id="main"><a class="viewcode-back" href="../modules.html#anchipy.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">():</span>
+<div class="viewcode-block" id="main"><a class="viewcode-back" href="../index.html#anchipy.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">():</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Main function</span>
 <span class="sd">    &quot;&quot;&quot;</span>
